kubernetes/platform/config/longhorn/routes/longhorn-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "longhorn.svg"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "longhorn.${internal_domain}"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
